<resources>
    <string name="app_name">Marvel</string>
    <string name="marvel">Marvel</string>

    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_characters">Characters</string>
    <string name="menu_comics">Comics</string>
    <string name="menu_events">Events</string>
    <string name="marvel_id">Marvel ID</string>
    <string name="marvel_Id">Marvel ID</string>
    <string name="comics">Comics</string>
    <string name="series_string">Series</string>
    <string name="events_string">Events</string>
    <string name="copyright">Data provided by Marvel. © 2021 MARVEL</string>
    <string name="string_urls">Urls</string>
    <string name="menu_search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="character">Character</string>
    <string name="order_by_name_a_z">order by name (A-Z)</string>
    <string name="order_by_name_z_a">order by name(Z-A)</string>
    <string name="order_by_recent_modified">order by recent modified</string>
    <string name="order_by_last_modified">order by last modified</string>
    <string name="floatingactionbutton">floatingActionButton</string>
    <string name="imageview2">imageView2</string>
    <string name="textview">TextView</string>

</resources>